# mcal

./: .gitignore  .pre-commit-config.yaml  README.md  mkdocs.yml  pyproject.toml  tox.ini
configs/: calibrate_top.yml  dask_kubecluster.yml  db_benchmark.yml
docs/writeups/: new_relic_general.md  new_relic_integration.md
k_calibrate/: actions.py  calibrate.py  compare.py  config.py  criteria.py  dev.py  new_relic.py  orchestrate.py  saves.py
k_calibrate/actions/: builtin.py  db_benchmark.py
k_calibrate/cli/: dev.py  main.py  util.py
k_calibrate/data/: __init__.py  newrelic-helm-values.yaml
k_calibrate/files/: __init__.py
k_calibrate/runner/: models.py  orchestrate.py
k_calibrate/samplers/: __init__.py  dask_k8_cluster.py  dask_prom_scheduler.py  dummy.py  k8_basic_stats.py  kubectl_top.py  namespace.py  nr_basic_stats.py  nr_frequency.py  nr_top.py
k_calibrate/sql/: __init__.py
k_calibrate/utils/: logging.py  nr.py  shared_model.py  time.py
mcal/runner/: orchestrate.py
mcal/samplers/: dask_prom.py  dummy.py
mcal/utils/: format.py
mcal/watchers/: dask.py
notebooks/: comparing.ipynb
tests/: conftest.py  test_config.py  test_files.py  test_hello.py
tests/calibrate/: test_schedule.py
tests/compare/: test_compare.py  test_filter.py  test_util.py
tests/integration/: config_dummy_watcher.yml  config_watcher_odd_even.yml  config_watcher_ordered.yml  config_watcher_short_timeout.yml  test_sampler.py  test_watcher.py
tests/test_resources/: __init__.py  cli_fixtures.py  env.toml  env_bad_file.txt  fixtures.py
tests/utils/: test_cmd.py  (+3 more)
(+33 files in other folders)
