[project]
name='k-calibrate'
description='Calibrate!'
version='0.0.0'
authors=[
    { name = 'Carter Fendley' }
]

dependencies = [
    "kubernetes",
    "click",
    "oyaml",
    "jinja2",
    "pydantic",
    "toml",
    "timedelta", # Built in timedelta sucks
    "pandas",
    "gql[all]"
]

[tool.setuptools.packages.find]
include = ["k_calibrate*"]

[project.entry-points."k_calibrate.samplers"]
samplers = "k_calibrate.samplers:SAMPLERS"

[project.scripts]
kc = "k_calibrate.cli.main:kc"

[project.optional-dependencies]
dev = [
    "pre-commit",
    "tox",
    "pytest",
    "pytest-cov",
    "pytest-benchmark",
    "pytest-unordered"
]
dask = [
    "dask",
    "distributed",
    "dask-kubernetes",
    "prometheus-client",
    # db-benchmark
    "pyarrow"
]
docs = [
    "mkdocs"
]
all = ["k-calibrate[dev, dask, docs]"]